--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: cpp
+compiler:
+  - gcc
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
 install:
+  - sudo apt-get install -qq g++-4.8
+  - export CXX="g++-4.8"
   - ./tools/install_emacs.sh
 before_script:
+  - $CXX --version
   - make
 script:
   - EMACS="$HOME/emacs/bin/emacs" make tests
