MAINT: Fix package locations

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ PY_CFLAGS := $$(python-config --cflags)
 PY_LDFLAGS := $$(python-config --ldflags)
 RPATH := $$(../tools/find_rpath.py)
 
-OBJS = pymacs_module.o python_interpreter.o emacs_environment.o converters.o
+OBJS = pymacs_module.o python_interpreter.o emacs_environment.o converters.o utils.o
 
 pymacs.so: $(OBJS)
 	$(CXX) -shared $(OBJS) -o $@ $(PY_LDFLAGS) $(LDFLAGS) -Wl,-rpath,$(RPATH)
